First commited as before_6740_rev1