@@ -37,17 +37,14 @@ public class TableDataSet implements IHistoricalDataSet, IBlockDataSet {
 	}
 	
 	//IDataSet Methods
-	@Override
 	public String[] getTitles() {
 		return titles;
 	}
 	
-	@Override
 	public String getID() {
 		return ID;
 	}
 	
-	@Override
 	public boolean readFromFile(File file) {
 		try {
 			FileReader fr = new FileReader(file);
@@ -72,7 +69,6 @@ public class TableDataSet implements IHistoricalDataSet, IBlockDataSet {
 		return false;
 	}
 	
-	@Override
 	public boolean writeToFile(File file) {
 		try {
 			file.createNewFile();
@@ -93,7 +89,7 @@ public class TableDataSet implements IHistoricalDataSet, IBlockDataSet {
 			TableEntry e;
 			Object[] o;
 			for(i=0; i<data.size(); i++) {
-				e = data.get(i);
+				e = (TableEntry)data.get(i);
 				for(j=0; j<e.getRowCount(); j++) {
 					o = e.getRow(j);
 					for(k=0; k<o.length; k++)
@@ -110,66 +106,56 @@ public class TableDataSet implements IHistoricalDataSet, IBlockDataSet {
 		return false;
 	}
 	
-	@Override
 	public int getRowCount() {
 		if(data.size() > 0)
-			return data.get(data.size()-1).getRowCount();
+			return ((TableEntry)data.get(data.size()-1)).getRowCount();
 		else
 			return 0;
 	}
 
-	@Override
 	public int getColCount() {
 		return titles.length;
 	}
 	
-	@Override
 	public Object[] getRow(int row) {
-		return data.get(data.size()-1).getRow(row);
+		return ((TableEntry)data.get(data.size()-1)).getRow(row);
 	}
 	
-	@Override
 	public Object[] getColumn(int col) {
 		return getColumn(col, 0, getRowCount());
 	}
 	
-	@Override
 	public Object[] getColumn(int col, int start, int end) {
 		if(start > end || start < 0 || end > getEntryCount() || col < COL_ROW_NUM || col >= this.getColCount())
 			return null;
 		if(COL_ROW_NUM == col) {
 			Integer[] rows = new Integer[Math.min(end-start, getRowCount())];
 			for(int i=0;i<rows.length; i++)
-				rows[i] = Integer.valueOf(start+i+1);
+				rows[i] = new Integer(start+i+1);
 			return rows;
 		}
-		return data.get(data.size()-1).getColumn(col, start, end);
+		return ((TableEntry)data.get(data.size()-1)).getColumn(col, start, end);
 	}
 
-	@Override
 	public void setData(IDataEntry data) {
 		append(data);
 	}
 	
-	@Override
 	public boolean remove(IDataEntry entry) {
 		return data.remove(entry);
 	}
 	//End IDataSet Methods
 	
 	//IHistoricalDataSet Methods	
-	@Override
 	public void append(IDataEntry data) {
 		if(data instanceof TableEntry)
 			this.data.add((TableEntry)data);
 	}
 	
-	@Override
 	public Object[] getHistoricalData(String key, int col) {
 		return getHistoricalData(key, col, 0, getEntryCount());
 	}
 	
-	@Override
 	public Object[] getHistoricalData(String key, int col, int start, int end) {
 		if(start > end || start < 0 || end > getEntryCount() || col < COL_ROW_NUM || col >= this.getColCount())
 			return null;
@@ -177,7 +163,7 @@ public class TableDataSet implements IHistoricalDataSet, IBlockDataSet {
 		if(COL_ROW_NUM == col) {
 			Integer[] rows = new Integer[Math.min(end-start, data.size())];
 			for(int i=0;i<rows.length; i++)
-				rows[i] = Integer.valueOf(start+i+1);
+				rows[i] = new Integer(start+i+1);
 			return rows;
 		}
 		
@@ -186,24 +172,21 @@ public class TableDataSet implements IHistoricalDataSet, IBlockDataSet {
 		for(int i=0; i<d.length; i++) {
 			d[i] = getEntry(i+start).get(key, col);
 			if(null == d[i])
-				d[i] = Integer.valueOf(0);
+				d[i] = new Integer(0);
 		}
 		return d;
 	}
 
-	@Override
 	public int getEntryCount() {
 		return data.size();
 	}
 	
-	@Override
 	public IDataEntry getEntry(int entry) {
 		if(entry >=0 && entry < getEntryCount())
-			return data.get(entry);
+			return (TableEntry)data.get(entry);
 		return null;
 	}
 	
-	@Override
 	public boolean remove(int entry) {
 		if(entry < 0 || entry >= data.size())
 			return false;
@@ -212,9 +195,8 @@ public class TableDataSet implements IHistoricalDataSet, IBlockDataSet {
 	//End IHistoricalDataSet Methods
 	
 	//IBlockDataSet Methods
-	@Override
 	public Object[][] getData() {
-		return data.get(getEntryCount()-1).getData();
+		return ((TableEntry)data.get(getEntryCount()-1)).getData();
 	}
 	//End IBlockDataSet Methods
 	
